# dataweave

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: cars.yaml  pizza.yaml  test_cases.yaml
src/: main.rs
