[package]
name = "dataweave"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MadebyAe/dataweave"
description = "DataWeave is a CLI tool that converts JSON/YAML to CSV by generating all possible permutations of the provided data."
authors = ["Ae <hi@angel-estrada.com>"]
keywords = ["cartesean", "permutation", "cli"]
categories = ["cli"]
license = "MIT"

[dependencies]
itertools = "0.10"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
